[FIX][UI] Improve color contrast in Cyborg theme for better WCAG compliance. --- * [FIX][UI] Improve color contrast in Cyborg theme for better WCAG compliance.
See merge request tikiwiki/tiki!4820

--- a/themes/cyborg/scss/_css-variables.scss
+++ b/themes/cyborg/scss/_css-variables.scss
@@ -1,7 +1,7 @@
 //--------------------------- Tiki CSS variables
 .tiki-top-nav-light {
     --tiki-top-bg: #{$light};
-    --tiki-top-color: #{$blue};
+    --tiki-top-color: #{$link-color};
     --tiki-top-hover-color: #{lighten($blue, 10%)};
     --tiki-top-text-color:  #{lighten($blue, 10%)};
     --bs-navbar-brand-color: #{$navbar-light-brand-color};
@@ -10,7 +10,7 @@
 
 .tiki-topbar-nav-light {
     --tiki-topbar-bg: #{$light};
-    --tiki-topbar-color: #{$blue};
+    --tiki-topbar-color: #{$link-color};
     --tiki-topbar-hover-color: #{lighten($blue, 10%)};
     --tiki-topbar-text-color: #{lighten($blue, 10%)};
 }
